sw/source/filter/ww8/ww8par.hxx
@@ -1572,7 +1572,7 @@ private:
 // rglst, hpllfo and hsttbListNames
 // the corresponding structures are: LSTF, LVLF, LFO LFOLVL
 
-    void SetAnlvStrings(SwNumFormat &rNum, WW8_ANLV const &rAV, const sal_uInt8* pText,
+    void SetAnlvStrings(SwNumFormat &rNum, int nLevel, WW8_ANLV const &rAV, const sal_uInt8* pText,
         size_t nStart, size_t nElements, bool bOutline);
     void SetAnld(SwNumRule* pNumR, WW8_ANLD const * pAD, sal_uInt8 nSwLevel, bool bOutLine);
     void SetNumOlst( SwNumRule* pNumR, WW8_OLST* pO, sal_uInt8 nSwLevel );
